// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`change pair 1`] = `
Object {
  "balances": Object {
    "DAI": "1000",
    "ETH": "5",
    "WETH": "10",
  },
  "baseToken": "WETH",
  "buyAllowance": true,
  "buyAmount": undefined,
  "buyToken": "WETH",
  "buyTokenDigits": 2,
  "dustLimitBase": "0.1",
  "dustLimitQuote": "0.1",
  "etherPriceUsd": "1",
  "gasEstimationStatus": "unset",
  "gasPrice": "0.01",
  "kind": undefined,
  "messages": Array [],
  "orderbook": Object {
    "blockNumber": 1,
    "buy": Array [],
    "sell": Array [],
    "spread": undefined,
  },
  "sellAllowance": true,
  "sellAmount": undefined,
  "sellToken": "DAI",
  "sellTokenDigits": 5,
  "stage": "editing",
}
`;

exports[`complex scenario 1`] = `
Object {
  "balances": Object {
    "DAI": "1000",
    "ETH": "5",
    "WETH": "10",
  },
  "baseToken": "WETH",
  "buyAllowance": true,
  "buyAmount": undefined,
  "buyToken": "DAI",
  "buyTokenDigits": 2,
  "dustLimitBase": "0.1",
  "dustLimitQuote": "0.1",
  "etherPriceUsd": "1",
  "gasEstimationStatus": "unset",
  "gasPrice": "0.01",
  "kind": undefined,
  "messages": Array [],
  "orderbook": Object {
    "blockNumber": 1,
    "buy": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "180",
        "quoteAmount": "1800",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "sell": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "200",
        "quoteAmount": "2000",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "spread": "20",
  },
  "sellAllowance": true,
  "sellAmount": undefined,
  "sellToken": "WETH",
  "sellTokenDigits": 5,
  "stage": "editing",
}
`;

exports[`complex scenario 2`] = `
Object {
  "balances": Object {
    "DAI": "1000",
    "ETH": "5",
    "WETH": "10",
  },
  "baseToken": "WETH",
  "buyAllowance": true,
  "buyAmount": "360",
  "buyToken": "DAI",
  "buyTokenDigits": 2,
  "dustLimitBase": "0.1",
  "dustLimitQuote": "0.1",
  "etherPriceUsd": "1",
  "gasEstimation": 40,
  "gasEstimationEth": "4e-19",
  "gasEstimationStatus": "calculated",
  "gasEstimationUsd": "4e-19",
  "gasPrice": "0.01",
  "kind": "sell",
  "messages": Array [],
  "orderbook": Object {
    "blockNumber": 1,
    "buy": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "180",
        "quoteAmount": "1800",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "sell": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "200",
        "quoteAmount": "2000",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "spread": "20",
  },
  "sellAllowance": true,
  "sellAmount": "2",
  "sellToken": "WETH",
  "sellTokenDigits": 5,
  "stage": "readyToProceed",
}
`;

exports[`complex scenario 3`] = `
Object {
  "balances": Object {
    "DAI": "1000",
    "ETH": "5",
    "WETH": "10",
  },
  "baseToken": "WETH",
  "buyAllowance": true,
  "buyAmount": "90",
  "buyToken": "DAI",
  "buyTokenDigits": 2,
  "dustLimitBase": "0.1",
  "dustLimitQuote": "0.1",
  "etherPriceUsd": "1",
  "gasEstimation": 40,
  "gasEstimationEth": "4e-19",
  "gasEstimationStatus": "calculated",
  "gasEstimationUsd": "4e-19",
  "gasPrice": "0.01",
  "kind": "buy",
  "messages": Array [],
  "orderbook": Object {
    "blockNumber": 1,
    "buy": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "180",
        "quoteAmount": "1800",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "sell": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "200",
        "quoteAmount": "2000",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "spread": "20",
  },
  "sellAllowance": true,
  "sellAmount": "0.5",
  "sellToken": "WETH",
  "sellTokenDigits": 5,
  "stage": "readyToProceed",
}
`;

exports[`complex scenario 4`] = `
Object {
  "balances": Object {
    "DAI": "1000",
    "ETH": "5",
    "WETH": "10",
  },
  "baseToken": "WETH",
  "buyAllowance": true,
  "buyAmount": undefined,
  "buyToken": "WETH",
  "buyTokenDigits": 2,
  "dustLimitBase": "0.1",
  "dustLimitQuote": "0.1",
  "etherPriceUsd": "1",
  "gasEstimationStatus": "unset",
  "gasPrice": "0.01",
  "kind": undefined,
  "messages": Array [],
  "orderbook": Object {
    "blockNumber": 1,
    "buy": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "180",
        "quoteAmount": "1800",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "sell": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "200",
        "quoteAmount": "2000",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "spread": "20",
  },
  "sellAllowance": true,
  "sellAmount": undefined,
  "sellToken": "DAI",
  "sellTokenDigits": 5,
  "stage": "editing",
}
`;

exports[`complex scenario 5`] = `
Object {
  "balances": Object {
    "DAI": "1000",
    "ETH": "5",
    "WETH": "10",
  },
  "baseToken": "WETH",
  "buyAllowance": true,
  "buyAmount": "2",
  "buyToken": "WETH",
  "buyTokenDigits": 2,
  "dustLimitBase": "0.1",
  "dustLimitQuote": "0.1",
  "etherPriceUsd": "1",
  "gasEstimation": 40,
  "gasEstimationEth": "4e-19",
  "gasEstimationStatus": "calculated",
  "gasEstimationUsd": "4e-19",
  "gasPrice": "0.01",
  "kind": "buy",
  "messages": Array [],
  "orderbook": Object {
    "blockNumber": 1,
    "buy": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "180",
        "quoteAmount": "1800",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "sell": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "200",
        "quoteAmount": "2000",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "spread": "20",
  },
  "sellAllowance": true,
  "sellAmount": "400",
  "sellToken": "DAI",
  "sellTokenDigits": 5,
  "stage": "readyToProceed",
}
`;

exports[`complex scenario 6`] = `
Object {
  "balances": Object {
    "DAI": "1000",
    "ETH": "5",
    "WETH": "10",
  },
  "baseToken": "WETH",
  "buyAllowance": true,
  "buyAmount": "0.5",
  "buyToken": "WETH",
  "buyTokenDigits": 2,
  "dustLimitBase": "0.1",
  "dustLimitQuote": "0.1",
  "etherPriceUsd": "1",
  "gasEstimation": 40,
  "gasEstimationEth": "4e-19",
  "gasEstimationStatus": "calculated",
  "gasEstimationUsd": "4e-19",
  "gasPrice": "0.01",
  "kind": "sell",
  "messages": Array [],
  "orderbook": Object {
    "blockNumber": 1,
    "buy": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "180",
        "quoteAmount": "1800",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "sell": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "200",
        "quoteAmount": "2000",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "spread": "20",
  },
  "sellAllowance": true,
  "sellAmount": "100",
  "sellToken": "DAI",
  "sellTokenDigits": 5,
  "stage": "readyToProceed",
}
`;

exports[`complex scenario 7`] = `
Object {
  "balances": Object {
    "DAI": "1000",
    "ETH": "5",
    "WETH": "10",
  },
  "baseToken": "WETH",
  "buyAllowance": true,
  "buyAmount": undefined,
  "buyToken": "WETH",
  "buyTokenDigits": 2,
  "dustLimitBase": "0.1",
  "dustLimitQuote": "0.1",
  "etherPriceUsd": "1",
  "gasEstimationStatus": "unset",
  "gasPrice": "0.01",
  "kind": "sell",
  "messages": Array [],
  "orderbook": Object {
    "blockNumber": 1,
    "buy": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "180",
        "quoteAmount": "1800",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "sell": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "200",
        "quoteAmount": "2000",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "spread": "20",
  },
  "sellAllowance": true,
  "sellAmount": undefined,
  "sellToken": "DAI",
  "sellTokenDigits": 5,
  "stage": "editing",
}
`;

exports[`initial state 1`] = `
Object {
  "balances": Object {
    "DAI": "1000",
    "ETH": "5",
    "WETH": "10",
  },
  "baseToken": "WETH",
  "buyAllowance": true,
  "buyAmount": undefined,
  "buyToken": "DAI",
  "buyTokenDigits": 2,
  "dustLimitBase": "0.1",
  "dustLimitQuote": "0.1",
  "etherPriceUsd": "1",
  "gasEstimationStatus": "unset",
  "gasPrice": "0.01",
  "kind": undefined,
  "messages": Array [],
  "orderbook": Object {
    "blockNumber": 1,
    "buy": Array [],
    "sell": Array [],
    "spread": undefined,
  },
  "sellAllowance": true,
  "sellAmount": undefined,
  "sellToken": "WETH",
  "sellTokenDigits": 5,
  "stage": "editing",
}
`;

exports[`transaction - buy 1`] = `
Object {
  "balances": Object {
    "DAI": "1000",
    "ETH": "5",
    "WETH": "10",
  },
  "baseToken": "WETH",
  "buyAllowance": true,
  "buyAmount": "90",
  "buyToken": "DAI",
  "buyTokenDigits": 2,
  "dustLimitBase": "0.1",
  "dustLimitQuote": "0.1",
  "etherPriceUsd": "1",
  "gasEstimation": 40,
  "gasEstimationEth": "4e-19",
  "gasEstimationStatus": "calculated",
  "gasEstimationUsd": "4e-19",
  "gasPrice": "0.01",
  "kind": "buy",
  "messages": Array [],
  "orderbook": Object {
    "blockNumber": 1,
    "buy": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "180",
        "quoteAmount": "1800",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "sell": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "200",
        "quoteAmount": "2000",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "spread": "20",
  },
  "sellAllowance": true,
  "sellAmount": "0.5",
  "sellToken": "WETH",
  "sellTokenDigits": 5,
  "stage": "readyToProceed",
}
`;

exports[`transaction - buy 2`] = `
Array [
  Array [
    Object {
      "buyAmount": "90",
      "buyToken": "DAI",
      "gasEstimation": 40,
      "gasPrice": "0.01",
      "kind": "buy",
      "sellAmount": "0.5",
      "sellToken": "WETH",
    },
  ],
]
`;

exports[`transaction - buy 3`] = `
Object {
  "balances": Object {
    "DAI": "1000",
    "ETH": "5",
    "WETH": "10",
  },
  "baseToken": "WETH",
  "buyAllowance": true,
  "buyAmount": "90",
  "buyToken": "DAI",
  "buyTokenDigits": 2,
  "dustLimitBase": "0.1",
  "dustLimitQuote": "0.1",
  "etherPriceUsd": "1",
  "gasEstimation": 40,
  "gasEstimationEth": "4e-19",
  "gasEstimationStatus": "calculated",
  "gasEstimationUsd": "4e-19",
  "gasPrice": "0.01",
  "kind": "buy",
  "messages": Array [],
  "orderbook": Object {
    "blockNumber": 1,
    "buy": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "180",
        "quoteAmount": "1800",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "sell": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "200",
        "quoteAmount": "2000",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "spread": "20",
  },
  "sellAllowance": true,
  "sellAmount": "0.5",
  "sellToken": "WETH",
  "sellTokenDigits": 5,
  "stage": "waitingForApproval",
}
`;

exports[`transaction - buy eth 1`] = `
Object {
  "balances": Object {
    "DAI": "1000",
    "ETH": "5",
    "WETH": "10",
  },
  "baseToken": "WETH",
  "buyAllowance": true,
  "buyAmount": "2",
  "buyToken": "ETH",
  "buyTokenDigits": 2,
  "dustLimitBase": "0.1",
  "dustLimitQuote": "0.1",
  "etherPriceUsd": "1",
  "gasEstimation": 40,
  "gasEstimationEth": "4e-19",
  "gasEstimationStatus": "calculated",
  "gasEstimationUsd": "4e-19",
  "gasPrice": "0.01",
  "kind": "buy",
  "messages": Array [],
  "orderbook": Object {
    "blockNumber": 1,
    "buy": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "180",
        "quoteAmount": "1800",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "sell": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "200",
        "quoteAmount": "2000",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "spread": "20",
  },
  "sellAllowance": true,
  "sellAmount": "400",
  "sellToken": "DAI",
  "sellTokenDigits": 5,
  "stage": "readyToProceed",
}
`;

exports[`transaction - buy eth 2`] = `
Array [
  Array [
    Object {
      "buyAmount": "2",
      "buyToken": "ETH",
      "gasEstimation": 40,
      "gasPrice": "0.01",
      "kind": "buy",
      "sellAmount": "400",
      "sellToken": "DAI",
    },
  ],
]
`;

exports[`transaction - buy eth 3`] = `
Object {
  "balances": Object {
    "DAI": "1000",
    "ETH": "5",
    "WETH": "10",
  },
  "baseToken": "WETH",
  "buyAllowance": true,
  "buyAmount": "2",
  "buyToken": "ETH",
  "buyTokenDigits": 2,
  "dustLimitBase": "0.1",
  "dustLimitQuote": "0.1",
  "etherPriceUsd": "1",
  "gasEstimation": 40,
  "gasEstimationEth": "4e-19",
  "gasEstimationStatus": "calculated",
  "gasEstimationUsd": "4e-19",
  "gasPrice": "0.01",
  "kind": "buy",
  "messages": Array [],
  "orderbook": Object {
    "blockNumber": 1,
    "buy": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "180",
        "quoteAmount": "1800",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "sell": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "200",
        "quoteAmount": "2000",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "spread": "20",
  },
  "sellAllowance": true,
  "sellAmount": "400",
  "sellToken": "DAI",
  "sellTokenDigits": 5,
  "stage": "waitingForApproval",
}
`;

exports[`transaction - pay eth 1`] = `
Object {
  "balances": Object {
    "DAI": "1000",
    "ETH": "5",
    "WETH": "10",
  },
  "baseToken": "WETH",
  "buyAllowance": true,
  "buyAmount": "90",
  "buyToken": "DAI",
  "buyTokenDigits": 2,
  "dustLimitBase": "0.1",
  "dustLimitQuote": "0.1",
  "etherPriceUsd": "1",
  "gasEstimation": 40,
  "gasEstimationEth": "4e-19",
  "gasEstimationStatus": "calculated",
  "gasEstimationUsd": "4e-19",
  "gasPrice": "0.01",
  "kind": "buy",
  "messages": Array [],
  "orderbook": Object {
    "blockNumber": 1,
    "buy": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "180",
        "quoteAmount": "1800",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "sell": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "200",
        "quoteAmount": "2000",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "spread": "20",
  },
  "sellAllowance": true,
  "sellAmount": "0.5",
  "sellToken": "ETH",
  "sellTokenDigits": 5,
  "stage": "readyToProceed",
}
`;

exports[`transaction - pay eth 2`] = `
Array [
  Array [
    Object {
      "buyAmount": "90",
      "buyToken": "DAI",
      "gasEstimation": 40,
      "gasPrice": "0.01",
      "kind": "buy",
      "sellAmount": "0.5",
      "sellToken": "ETH",
    },
  ],
]
`;

exports[`transaction - pay eth 3`] = `
Object {
  "balances": Object {
    "DAI": "1000",
    "ETH": "5",
    "WETH": "10",
  },
  "baseToken": "WETH",
  "buyAllowance": true,
  "buyAmount": "90",
  "buyToken": "DAI",
  "buyTokenDigits": 2,
  "dustLimitBase": "0.1",
  "dustLimitQuote": "0.1",
  "etherPriceUsd": "1",
  "gasEstimation": 40,
  "gasEstimationEth": "4e-19",
  "gasEstimationStatus": "calculated",
  "gasEstimationUsd": "4e-19",
  "gasPrice": "0.01",
  "kind": "buy",
  "messages": Array [],
  "orderbook": Object {
    "blockNumber": 1,
    "buy": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "180",
        "quoteAmount": "1800",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "sell": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "200",
        "quoteAmount": "2000",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "spread": "20",
  },
  "sellAllowance": true,
  "sellAmount": "0.5",
  "sellToken": "ETH",
  "sellTokenDigits": 5,
  "stage": "waitingForApproval",
}
`;

exports[`transaction - sell 1`] = `
Object {
  "balances": Object {
    "DAI": "1000",
    "ETH": "5",
    "WETH": "10",
  },
  "baseToken": "WETH",
  "buyAllowance": true,
  "buyAmount": "180",
  "buyToken": "DAI",
  "buyTokenDigits": 2,
  "dustLimitBase": "0.1",
  "dustLimitQuote": "0.1",
  "etherPriceUsd": "1",
  "gasEstimation": 40,
  "gasEstimationEth": "4e-19",
  "gasEstimationStatus": "calculated",
  "gasEstimationUsd": "4e-19",
  "gasPrice": "0.01",
  "kind": "sell",
  "messages": Array [],
  "orderbook": Object {
    "blockNumber": 1,
    "buy": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "180",
        "quoteAmount": "1800",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "sell": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "200",
        "quoteAmount": "2000",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "spread": "20",
  },
  "sellAllowance": true,
  "sellAmount": "1",
  "sellToken": "WETH",
  "sellTokenDigits": 5,
  "stage": "readyToProceed",
}
`;

exports[`transaction - sell 2`] = `
Array [
  Array [
    Object {
      "buyAmount": "180",
      "buyToken": "DAI",
      "gasEstimation": 40,
      "gasPrice": "0.01",
      "kind": "sell",
      "sellAmount": "1",
      "sellToken": "WETH",
    },
  ],
]
`;

exports[`transaction - sell 3`] = `
Object {
  "balances": Object {
    "DAI": "1000",
    "ETH": "5",
    "WETH": "10",
  },
  "baseToken": "WETH",
  "buyAllowance": true,
  "buyAmount": "180",
  "buyToken": "DAI",
  "buyTokenDigits": 2,
  "dustLimitBase": "0.1",
  "dustLimitQuote": "0.1",
  "etherPriceUsd": "1",
  "gasEstimation": 40,
  "gasEstimationEth": "4e-19",
  "gasEstimationStatus": "calculated",
  "gasEstimationUsd": "4e-19",
  "gasPrice": "0.01",
  "kind": "sell",
  "messages": Array [],
  "orderbook": Object {
    "blockNumber": 1,
    "buy": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "180",
        "quoteAmount": "1800",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "sell": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "200",
        "quoteAmount": "2000",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "spread": "20",
  },
  "sellAllowance": true,
  "sellAmount": "1",
  "sellToken": "WETH",
  "sellTokenDigits": 5,
  "stage": "waitingForApproval",
}
`;

exports[`validation - dust limit 1`] = `
Object {
  "balances": Object {
    "DAI": "1000",
    "ETH": "5",
    "WETH": "10",
  },
  "baseToken": "WETH",
  "buyAllowance": true,
  "buyAmount": "0.18",
  "buyToken": "DAI",
  "buyTokenDigits": 2,
  "dustLimitBase": "0.1",
  "dustLimitQuote": "0.1",
  "etherPriceUsd": "1",
  "gasEstimationStatus": "unset",
  "gasPrice": "0.01",
  "kind": "sell",
  "messages": Array [
    Object {
      "amount": "0.1",
      "field": "sellToken",
      "kind": "dustAmount",
      "placement": "bottom",
      "priority": 2,
      "token": "WETH",
    },
  ],
  "orderbook": Object {
    "blockNumber": 1,
    "buy": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "180",
        "quoteAmount": "1800",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "sell": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "200",
        "quoteAmount": "2000",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "spread": "20",
  },
  "sellAllowance": true,
  "sellAmount": "0.001",
  "sellToken": "WETH",
  "sellTokenDigits": 5,
  "stage": "editing",
}
`;

exports[`validation - incredible amount base 1`] = `
Object {
  "balances": Object {
    "DAI": "1000",
    "ETH": "5",
    "WETH": "10",
  },
  "baseToken": "WETH",
  "buyAllowance": true,
  "buyAmount": undefined,
  "buyToken": "DAI",
  "buyTokenDigits": 2,
  "dustLimitBase": "0.1",
  "dustLimitQuote": "0.1",
  "etherPriceUsd": "1",
  "gasEstimationStatus": "unset",
  "gasPrice": "0.01",
  "kind": "sell",
  "messages": Array [
    Object {
      "field": "sellToken",
      "kind": "orderbookTotalExceeded",
      "placement": "top",
      "priority": 3,
    },
    Object {
      "field": "sellToken",
      "kind": "incredibleAmount",
      "placement": "bottom",
      "priority": 2,
      "token": "WETH",
    },
  ],
  "orderbook": Object {
    "blockNumber": 1,
    "buy": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "180",
        "quoteAmount": "1800",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "sell": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "200",
        "quoteAmount": "2000",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "spread": "20",
  },
  "sellAllowance": true,
  "sellAmount": "1000000000000001",
  "sellToken": "WETH",
  "sellTokenDigits": 5,
  "stage": "editing",
}
`;

exports[`validation - incredible amount quote 1`] = `
Object {
  "balances": Object {
    "DAI": "1000",
    "ETH": "5",
    "WETH": "10",
  },
  "baseToken": "WETH",
  "buyAllowance": true,
  "buyAmount": undefined,
  "buyToken": "WETH",
  "buyTokenDigits": 2,
  "dustLimitBase": "0.1",
  "dustLimitQuote": "0.1",
  "etherPriceUsd": "1",
  "gasEstimationStatus": "unset",
  "gasPrice": "0.01",
  "kind": "sell",
  "messages": Array [
    Object {
      "field": "sellToken",
      "kind": "orderbookTotalExceeded",
      "placement": "top",
      "priority": 3,
    },
    Object {
      "field": "sellToken",
      "kind": "incredibleAmount",
      "placement": "bottom",
      "priority": 2,
      "token": "DAI",
    },
  ],
  "orderbook": Object {
    "blockNumber": 1,
    "buy": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "180",
        "quoteAmount": "1800",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "sell": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "200",
        "quoteAmount": "2000",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "spread": "20",
  },
  "sellAllowance": true,
  "sellAmount": "1000000000000001",
  "sellToken": "DAI",
  "sellTokenDigits": 5,
  "stage": "editing",
}
`;

exports[`validation - insufficient balance 1`] = `
Object {
  "balances": Object {
    "DAI": "1000",
    "ETH": "5",
    "WETH": "10",
  },
  "baseToken": "WETH",
  "buyAllowance": true,
  "buyAmount": "5.5",
  "buyToken": "WETH",
  "buyTokenDigits": 2,
  "dustLimitBase": "0.1",
  "dustLimitQuote": "0.1",
  "etherPriceUsd": "1",
  "gasEstimationStatus": "unset",
  "gasPrice": "0.01",
  "kind": "sell",
  "messages": Array [
    Object {
      "field": "sellToken",
      "kind": "insufficientAmount",
      "placement": "bottom",
      "priority": 1,
      "token": "DAI",
    },
  ],
  "orderbook": Object {
    "blockNumber": 1,
    "buy": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "180",
        "quoteAmount": "1800",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "sell": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "200",
        "quoteAmount": "2000",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "spread": "20",
  },
  "sellAllowance": true,
  "sellAmount": "1100",
  "sellToken": "DAI",
  "sellTokenDigits": 5,
  "stage": "editing",
}
`;

exports[`validation - orderbook exceeded base 1`] = `
Object {
  "balances": Object {
    "DAI": "1000",
    "ETH": "5",
    "WETH": "10",
  },
  "baseToken": "WETH",
  "buyAllowance": true,
  "buyAmount": "11",
  "buyToken": "WETH",
  "buyTokenDigits": 2,
  "dustLimitBase": "0.1",
  "dustLimitQuote": "0.1",
  "etherPriceUsd": "1",
  "gasEstimationStatus": "unset",
  "gasPrice": "0.01",
  "kind": "buy",
  "messages": Array [
    Object {
      "field": "buyToken",
      "kind": "orderbookTotalExceeded",
      "placement": "top",
      "priority": 3,
    },
  ],
  "orderbook": Object {
    "blockNumber": 1,
    "buy": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "180",
        "quoteAmount": "1800",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "sell": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "200",
        "quoteAmount": "2000",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "spread": "20",
  },
  "sellAllowance": true,
  "sellAmount": undefined,
  "sellToken": "DAI",
  "sellTokenDigits": 5,
  "stage": "editing",
}
`;

exports[`validation - orderbook exceeded quote 1`] = `
Object {
  "balances": Object {
    "DAI": "1000",
    "ETH": "5",
    "WETH": "10",
  },
  "baseToken": "WETH",
  "buyAllowance": true,
  "buyAmount": "2001",
  "buyToken": "DAI",
  "buyTokenDigits": 2,
  "dustLimitBase": "0.1",
  "dustLimitQuote": "0.1",
  "etherPriceUsd": "1",
  "gasEstimationStatus": "unset",
  "gasPrice": "0.01",
  "kind": "buy",
  "messages": Array [
    Object {
      "field": "buyToken",
      "kind": "orderbookTotalExceeded",
      "placement": "top",
      "priority": 3,
    },
  ],
  "orderbook": Object {
    "blockNumber": 1,
    "buy": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "180",
        "quoteAmount": "1800",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "sell": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "200",
        "quoteAmount": "2000",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "spread": "20",
  },
  "sellAllowance": true,
  "sellAmount": undefined,
  "sellToken": "WETH",
  "sellTokenDigits": 5,
  "stage": "editing",
}
`;
